Modified ac-container position:relative to position:fixed. Code for relative messed with the alignment.

--- a/agecheck.css
+++ b/agecheck.css
@@ -22,7 +22,7 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif; 
     width: 600px;
-    position: relative;
+    position: fixed;
     padding: 20px 20px 30px 20px;
     background: #fff;
     z-index: 99999;
